<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/accounts" />
        <item
            android:id="@+id/nav_investor"
            android:icon="@drawable/ic_menu_investor"
            android:title="@string/investor" />
        <item
            android:id="@+id/nav_mortgages"
            android:icon="@drawable/ic_menu_mortgages"
            android:title="@string/mortgages" />
        <item
            android:id="@+id/nav_savings"
            android:icon="@drawable/ic_menu_savings"
            android:title="@string/savings" />
    </group>

    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/nav_call"
                android:icon="@drawable/ic_menu_call_black"
                android:title="@string/callus" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_menu_email_black"
                android:title="@string/email" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
