<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutDetailFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/default_title"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textHolder"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="50dp"
        android:text="@string/default_holder"/>

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:text="@string/default_description" />

    <TextView
        android:id="@+id/textAmount"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:text="@string/default_amount"/>

    <TextView
        android:id="@+id/textHelp"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:text="@string/default_help"/>

</LinearLayout>