<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:hint="@string/edit_message"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/editable_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:hint="@string/insert_here"
        android:inputType="textPersonName"
        android:textAlignment="center" />
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:layout_below="@+id/editable_item">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/delete"
            android:id="@+id/btnDelete"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            android:id="@+id/btnSave"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</RelativeLayout>