<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mortgages">
    <TextView
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:background="@null"
        android:hint="@string/mortgage_message"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:entries="@array/array_properties" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="380dp"
        android:layout_height="176dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="167dp"
        android:text="@string/label_name" />
    <Button
        android:id="@+id/button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:onClick="onClickFindProperty"
        android:text="@string/find" />
    <TextView
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_above="@+id/btnMap"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:hint="@string/label_property"
        android:textAlignment="center"
        android:textSize="18sp" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="201dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/des_gen"
        app:srcCompat="@drawable/gmaps" />
    <Button
        android:id="@+id/btnMap"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="202dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/imageView2"
        android:text="" />
</RelativeLayout>