<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_background"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="215dp"
        android:layout_height="133dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:contentDescription="@string/logo_des"
        app:srcCompat="@drawable/logo_bank" />
    <EditText
        android:id="@+id/userName"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="209dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/user_screen"
        android:inputType="textPersonName"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/passWord"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="271dp"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/pass_screen"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textSize="16sp" />
    <Button
        android:id="@+id/loginBtn"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="154dp"
        android:elevation="0dp"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>