<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Investor">

    <TextView
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:hint="@string/title_activity_investor"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText2"
        android:background="@null"
        android:hint="@string/invest_progress"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="385dp"
        android:layout_height="200dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp" />

    <TextView
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="256dp"
        android:background="@null"
        android:hint="@string/invest_map"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <WebView
        android:id="@+id/web"
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>